@@ -11,6 +11,7 @@ export("+.section",
        abbreviateTimeLabels,
        approx3d,
        beamName,
+       boxcarAverage,
        addColumn,
        airRho,
        angleRemap,
